--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
+    "bootstrap-icons": "^1.10.5",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
